siduxcc (0.9.11) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 18 Feb 2008 16:09:15 +0100

siduxcc (0.9.10) unstable; urgency=low

  * the "firmware" section is deprecated, don't promote it.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 18 Feb 2008 16:01:49 +0100

siduxcc (0.9.9) unstable; urgency=low

  * kde: services: action buttons added
  * kde: kernel: updated for the new kernels

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 17 Feb 2008 21:34:50 +0100

siduxcc (0.9.8) unstable; urgency=low

  * typo fix "Samaba" --> "Samba", thanks to muchan for noticing.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 12 Feb 2008 14:43:44 +0100

siduxcc (0.9.7) unstable; urgency=low

  * fix dutch "verwijder oude kernels" localisation, thanks to HarzG.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 05 Feb 2008 23:47:13 +0100

siduxcc (0.9.6) unstable; urgency=low

  * jp translation added
  * jp -> ja 

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 03 Feb 2008 21:27:57 +0100

siduxcc (0.9.5) unstable; urgency=low

  * typos fixed

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 31 Jan 2008 15:09:05 +0100

siduxcc (0.9.4) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * add temporary siduxcchermes.svg sidux_book.svg ressources.
  * refresh generated PNGs.

  [ Fabian Wuertz ]
  * couldn't connect bug fixed
  * kde: network: iwlist tab added 

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 30 Jan 2008 14:02:40 +0100

siduxcc (0.9.3) unstable; urgency=low

  [ Bernard Gray ]
  * add svg based icons

  [ Stefan Lippers-Hollmann ]
  * adapt packaging to actually make use of the new svg icons.
  * create png icons.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 29 Jan 2008 02:53:05 +0100

siduxcc (0.9.2) unstable; urgency=low

  * fix broken sidux brand in polish translations.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 26 Jan 2008 13:42:16 +0100

siduxcc (0.9.1) unstable; urgency=low
